build: add dist to files

--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
       "default": "./dist/index.mjs"
     }
   },
+  "files": [
+    "dist"
+  ],
   "author": "ensi",
   "license": "MIT",
   "devDependencies": {
